# Data-Agent

./: .ci-trigger  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ai-config.example.json  chainlit_app.py  package.json  pyproject.toml  test_complete.py
OpenManus/: =0.6.21  (+40 more)
langchain_office_assistant/: README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_comprehensive.py  test_interactive.py  test_refactored.py
langchain_office_assistant/adapters/: __init__.py  anthropic.py  azure.py  base.py  custom.py  dashscope.py  doubao.py  ernie.py  gemini.py  openai.py  spark.py  zhipu.py
langchain_office_assistant/agents/: __init__.py  cache_manager.py  chain_manager.py  config_validator.py  core.py  intent_recognizer.py  memory_manager.py  param_extractor.py  performance.py  plugin_manager.py  trace_recorder.py  validators.py
langchain_office_assistant/api/: main.py  sandbox.py  sandbox_routes.py  server.py  simple_server.py
langchain_office_assistant/cli/: main.py
langchain_office_assistant/docker/: Dockerfile  docker-compose.yml
langchain_office_assistant/frontend/: index.html
langchain_office_assistant/knowledge_db/: index.faiss  index.pkl
langchain_office_assistant/plugins/: __init__.py  base.py
langchain_office_assistant/tests/: test_agents.py  test_plugins.py
langchain_office_assistant/tools/: __init__.py
langchain_office_assistant/traces/: 00f7f5397b7c516e5db8779d8c42f37f_1778469834.json  027d150dedb9adc24d1c4166c2cdbe6c_1778471445.json  029e2f753418cc4c13ef9ff576d52c2e_1778470656.json  03f00853b3f8fd32aa621c99d40aed76_1778471085.json  03f5bf95bb15804f2c6d046b004061cd_1778470678.json  043d02b0a504c0a95761955b6d095c4a_1778472172.json  046993245c709bbfed5ed9ca4ac452ff_1778470991.json  04d79e68a4d9a98c644a43670c048616_1778470872.json  059abc38ca14e182f4f87dc9c061f2c2_1778471453.json  078ab562a668e3ea5779b79999e0dd49_1778471341.json  0872b06481bf5e371e9c5f6defaada95_1778470879.json  088981fcbaaef1e7e321d7eb0da8581f_1778471423.json  0901ec0664e7b7d073233be34189c7cf_1778471439.json  097996c9b2a9c26d05aa8bbde12e05d8_1778469834.json  0a049c6db8fd7543fefe5e198e6656d6_1778470774.json  0d7beab6ef579a28d4a691ef77e6ef88_1778472506.json  0e0171674060a424f3397b2bbdec63b4_1778470762.json  0e884a989e022cf607ee0b451a3a4c79_1778471428.json  0eec74035a049d81761e068518cf7a25_1778469581.json  0fe15f2d35c155b6a1090e9c22c33bc4_1778471339.json  11e8971655105c84b473540f46523f04_1778471346.json  132ef087b59b955ce69be5230b438266_1778471419.json  13a94e857c073e2b2408948c7fdbc881_1778470780.json  144a73291203628e4fbe5e5f25947bcf_1778470992.json  14ede32b738bfb95e1052879622d11a1_1778470877.json  16d794e732485f2d01a4fe43fb08211d_1778471331.json  191a81a80b59e989986ea968f9d0b34b_1778471420.json  1b6a5b680b2f2c1a1317de26d4f245b9_1778470764.json  1d61f28e414326a3fd65ec05abb82b86_1778470754.json  1f288086759c2b13b012e0692afc521b_1778471332.json  20ec45d8ac7692aea6b285787a1da43d_1778470658.json  2107be656d68081747858ed745e80fba_1778470873.json  21ea8e95c2782d70f6fc54b8a2bb802b_1778470894.json  225df7f33480fb1e30c01c2bb3c98a50_1778471343.json  249c0d5659d71919be316500da8ae165_1778470883.json  2532b9ee5e9330822eb1bb51b213e0c0_1778472175.json  2617a2f53576d3e24cfae347745c5271_1778471426.json  26cb5a0dfe53025a415bd28cf0ffdf81_1778469836.json  26cd87c5b795917cbd2a6baa7e6d7c2e_1778470897.json  (+206 more)
(+230 files in other folders)
